# uvFastAPI

./: .env.example  README.md  main.py  pyproject.toml
app/core/: config.py
docs/: setup.ini
test/: db_test.py
tests/: test_mongo.py  test_postgres.py  test_sqlite.py
